fix dropdown menu items alignment

--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -264,6 +264,10 @@
   }
 }
 
+.headerMenuTitleSmall {
+  margin: 1em 0 0;
+}
+
 .headerMenuTitleBottom {
   margin: 2em 0;
 
